--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "aphrodite": "^2.4.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router": "^6.2.1",
     "react-scripts": "5.0.0",
     "three": "^0.137.5",
     "web-vitals": "^2.1.4",
